--- a/style/Home.css
+++ b/style/Home.css
@@ -4,6 +4,7 @@
 } */
  .bgcolor{
     background-color:aliceblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
 
 .subash-img{
@@ -19,8 +20,9 @@
     display: inline-block;
     vertical-align: top; 
     display: flex;
-    margin: 25px;
-    margin-top: 30px;
+    margin: 30px;
+    margin-top: 70px;
+    margin-left: 70px;
     font-size: 50px;
     font-family :Georgia, 'Times New Roman', Times, serif;
 }
@@ -73,6 +75,121 @@
     margin-right: 20px;
 }
 .change:hover {
-    color: red;
-    font-size: 110%;
+    color: CORAL;
+    /* background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 75%); */
 }
+.name{
+    
+    color:#FF7F50;
+    font-weight: bold;
+}
+
+.container {
+    border-top-left-radius: 37px 140px;
+    border-top-right-radius: 23px 130px;
+    border-bottom-left-radius: 110px 19px;
+    border-bottom-right-radius: 120px 24px;
+    top: 135px;
+    display: block;
+    position: relative;
+    border: solid 3px black;
+    padding: 20px 50px;
+    max-width: 00px;
+    width: 70%;
+    margin: 90px 600px 0;
+    font-size: 19px;
+    line-height: 28px;
+    transform: rotate(-1deg);
+    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+    transition: all 0.10s ease-in;
+    left: -40px;
+    font-family: 'Handlee', cursive;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+
+  .container:hover {
+    transform: translateY(-10px) rotate(1deg);
+    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+  }
+
+  .container:hover .border {
+    transform: translateY(4px) rotate(-5deg);
+  }
+  .border {
+    position: absolute;
+    transition: all 0.13s ease-in;
+  }
+
+  .border:before,
+  .border:after {
+    color: #515d9c;
+    font-size: 15px;
+    position: absolute;
+  }
+
+  .tl {
+    position: absolute;
+    left: -50px;
+    top: -63px;
+    font-weight: 600;
+  }
+
+  .tl:before {
+    left: 120px;
+    top: 30px;
+  }
+
+  .tl:after {
+    left: 0px;
+    top: 80px;
+  }
+
+  .tr {
+    right: -50px;
+    top: -63px;
+    font-weight: 600;
+  }
+
+  .tr:before {
+    left: 0;
+    top: 30px;
+  }
+
+  .tr:after {
+    left: 130px;
+    top: 80px;
+  }
+
+  .bl {
+    left: -50px;
+    bottom: -71px;
+    font-weight: 600;
+  }
+
+  .bl:before {
+    left: 120px;
+    top: -30px;
+  }
+
+  .bl:after {
+    left: 0px;
+    top: -90px;
+  }
+
+  .br {
+    right: -50px;
+    bottom: -63px;
+    font-weight: 600;
+  }
+
+  .br:before {
+    left: 0;
+    top: -30px;
+  }
+
+  .br:after {
+    right: -10px;
+    top: -80px;
+  }
