--- a/style/Home.css
+++ b/style/Home.css
@@ -1,6 +1,6 @@
 
 .bgcolor{
-    background-color:rgb(183, 183, 183);
+    background-color:aliceblue;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
 
