--- a/style/Home.css
+++ b/style/Home.css
@@ -1,8 +1,26 @@
-
+html {
+   scroll-behavior: smooth; /* Enable smooth scrolling */
+}
 .bgcolor{
     background-color:aliceblue;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
  }
+@keyframes appear {
+  from{
+    opacity:0;
+    clip-path: insert(100% 100% 0 0);
+  }
+  to{
+    opacity: 1;
+    clip-path: insert(0 0 0 0);
+  }
+}
+.block{
+  animation: appear linear;
+  animation-timeline:view() ;
+  animation-range: entry 0% cover;
+}
 
 /* .subash-img{
     
@@ -159,16 +177,6 @@ nav a:hover{
         display: block;
     }
 }
-
-
-
-
-
-
-
-
-
-
 
 
 /* Flexbox container for image and text */
@@ -385,7 +393,7 @@ nav a:hover{
 .button-49,
 .button-49:after {
   width: 150px;
-  height: 86px;
+  height: 76px;
   line-height: 78px;
   font-size: 20px;
   font-family: 'Bebas Neue', sans-serif;
