--- a/style/About.css
+++ b/style/About.css
@@ -7,7 +7,7 @@
 } */
 
 .about-head {
-  border-right: solid 3px rgba(11, 11, 11, 0.75);
+  border-right: solid 3px rgba(0, 0, 0, 0.75);
   white-space: nowrap;
   overflow: hidden;    
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -36,4 +36,25 @@
 @keyframes animated-cursor{
   from{border-right-color: rgba(2, 2, 2, 0.75);}
   to{border-right-color: transparent;}
+}
+/* acdemics */
+.academic{
+padding-left: 300px;
+font-family:Georgia, 'Times New Roman', Times, serif ;
+}
+.school1{
+  display: flex;
+  
+}
+.school-name{
+  padding-left: 25px;
+  font-size: 40px;
+ 
+  font-weight:550;
+  color: brown;
+}
+.grade{
+  padding-left: 83px;
+  font-size: 30px;
+  font-weight: 550;
 }
